[package]
name = "pallet-actors"
version = "2.0.0-rc2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet for actor-based smart contracts"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
pwasm-utils = { version = "0.12.0", default-features = false }
wasmi-validation = { version = "0.3.0", default-features = false }
parity-wasm = { version = "0.41.0", default-features = false }
frame-support = { version = "2.0.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { version = "2.0.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-balances = { version = "2.0.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-core = { version = "2.0.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "2.0.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { version = "2.0.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { version = "2.0.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-sandbox = { version = "0.8.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-arithmetic = { version = "2.0.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }

[dev-dependencies]
sp-core = { version = "2.0.0-rc2", git = "https://github.com/paritytech/substrate", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"pwasm-utils/std",
	"wasmi-validation/std",
	"parity-wasm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"sp-sandbox/std",
	"sp-arithmetic/std",
]
